scheek-Resume&AboutMeSectionUpdates-11.20.25

--- a/index.html
+++ b/index.html
@@ -193,21 +193,38 @@
 
             <!-- Content and Subtitle-->
             <div class="col-lg-7 content" data-aos="fade-up">
-              <h2>Sasha Cheek is a systems engineer and science writer who explores how technology, data, and human
-                systems
-                intersect.</h2>
+              <h2>Sasha Cheek is a systems-minded technologist and science/tech writer who explores how software, data,
+                and
+                human systems intersect.</h2>
+
               <div class="container" data-aos="fade-up" data-aos-delay="100">
-                <p>Her work focuses on translating complex engineering and organizational processes into clear,
-                  data-driven
-                  stories that reveal their real-world impact.</p>
-                <p>With experience managing large-scale API and data integrations for global platforms, she brings a
-                  rare technical
-                  fluency to her writing. Sasha is currently an M.A. candidate in Science Writing at Johns Hopkins
-                  University, where
-                  she studies how to connect rigorous analysis with accessible communication.</p>
-                <p>When not building or debugging systems, she writes about the people, structures, and ideas shaping
-                  the future of
-                  science and technology.</p>
+
+                <div class="about-paragraphs mt-3">
+                  <p>
+                    Her core career centers on technical program work—API integrations, systems reliability, data flows,
+                    and cross-functional delivery for large-scale platforms. She specializes in translating complex
+                    technical ecosystems into clear, actionable insights that support real-world decision-making.
+                  </p>
+                </div>
+
+                <div class="about-paragraphs mt-3">
+                  <p>
+                    Sasha also writes about science and technology as a complementary practice, using storytelling to
+                    make
+                    complex engineering and scientific concepts accessible to general audiences. Writing enhances her
+                    technical work; it is not a separate career track.
+                  </p>
+                </div>
+
+                <div class="about-paragraphs mt-3">
+                  <p>
+                    With experience leading API and data integrations across global teams, she brings deep technical
+                    fluency to her communication. She is currently pursuing an M.A. in Science Writing at Johns Hopkins
+                    University to strengthen her ability to explain the systems and structures shaping the future of
+                    technology.
+                  </p>
+                </div>
+
               </div>
             </div>
     </section><!-- END OF ABOUT SECTION -->
@@ -672,11 +689,9 @@
                 <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="mb-3">
                   <em>
-                    Systems integration engineer and freelance science writer with roots at NASA, bridging engineering
-                    expertise and clear
-                    communication. Seeking freelance writer opportunities to translate engineering concepts for
-                    general
-                    audiences.
+                    Technical integrations specialist and former tech program manager with roots at NASA, building
+                    systems engineering skills while translating complex technical concepts into clear, engaging
+                    stories. Currently pursuing an M.A. in Science Writing at Johns Hopkins University.
                   </em>
                 </p>
               </div>
@@ -897,45 +912,16 @@
                 <p class="r-year">2023 - Present</p>
                 <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="em"><b><i>Indeed.com, Research Triangle Park, NC (Remote)</i></b></em></p>
-                <p class="description"><span class="bullet">&bull; Manage ILM (Integraton Lifecycle Management) for
-                    high
-                    spending partners' integrations, including configuration, testing, deployment, monitoring, and
-                    version
-                    control</span></p>
-                <p class="description"><span class="bullet">&bull; Recognized as trusted SME (subject matter expert)
-                    on
-                    API (application programming interface) and data feed integrations, advising cross-functional
-                    teams
-                    on
-                    best practices for scalable system
-                    architecture and design
-                    materials</span></p>
-                <p class="description"><span class="bullet">&bull; Led cross-functional investigation in July 2025 to
-                    mitigate 3rd party partner GraphQL API abuse patterns, and proposed
-                    a data pipeline solution to centralize and improve all company API observability</span></p>
-                <p class="description"><span class="bullet">&bull; Engineered and launched 20+ complex API and XML
-                    feed
-                    integrations from 2023 to the present day</span></p>
-              </div>
-
-              <div class="resume-item ps-4 position-relative">
-                <h4 class="mb-2">Freelance Science Writer</h4>
-                <p class="r-year">2024 - Present</p>
-                <div class="t-divider t-node" aria-hidden="true"></div>
-                <p class="em"><b><i>Independent, Research Triangle Park, NC</i></b></em></p>
-                <p class="description"><span class="bullet">&bull; Interviewed leading experts, including 2 particle
-                    physicists and the Harvard director of neurology, to produce
-                    authoritative science articles about cosmic radiation impact on astronauts and BCIs
-                    (brain-computer
-                    interfaces)
-                  </span></p>
-                <p class="description"><span class="bullet">&bull; Created a website using Bootstrap, JavaScript,
-                    HTML,
-                    CSS, and Git to advertise writing and technical portfolios of work</span>
+                <p class="description"><span class="bullet">&bull; Owned end-to-end ILM (Integration Lifecycle
+                    Management) for high-value ATS partner integrations, handling configuration, testing, deployment,
+                    monitoring, and version control to ensure reliable, scalable onboarding</span></p>
+                <p class="description"><span class="bullet">&bull; Led a cross-functional investigation into GraphQL API
+                    abuse by a third-party partner, identifying misuse patterns and proposing a centralized
+                    observability pipeline to improve API monitoring, reduce abuse risk, and streamline detection</span>
                 </p>
-                <p class="description"><span class="bullet">&bull; Conducted research using methods such as sourcing
-                    peer-reviewed scientific journals and media, interviewing SMEs,
-                    and fact-checking to ensure the validity of info before publishing stories</span></p>
+                <p class="description"><span class="bullet">&bull; Served as a SME (subject matter expert) on API and
+                    data-feed integrations, advising engineering, product, and partnerships teams on scalable system
+                    architecture and best practices to improve reliability and integration quality</span></p>
               </div>
 
               <div class="resume-item ps-4 position-relative">
@@ -944,21 +930,19 @@
                 <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="em"><b><i>Various Projects, Research Triangle Park, NC (Remote)</i></b></em></p>
                 <p class="project"><b><i>MICROSOFT (2022)</i></b></p>
-                <p class="description"><span class="bullet">&bull; Led migration for 3500+ CDN (content delivery
-                    network)
-                    pages, and made Microsoft products more accessible
-                    to end-users for online orders using Akamai software</span></p>
-                <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
-                    stakeholders via automated dashboards (Power BI/Azure
-                    DevOps), reducing misalignment by 30%</span></p>
+                <p class="description"><span class="bullet">&bull; Led the migration of 3,500+ CDN (content delivery
+                    network) pages using Akamai, improving content delivery performance and enhancing accessibility for
+                    end-users across Microsoft’s online ordering platforms</span></p>
+                <p class="description"><span class="bullet">&bull; Built automated Power BI and Azure DevOps dashboards
+                    to communicate CDN workflow status to global stakeholders, reducing technical misalignment and
+                    cross-team confusion by 30%</span></p>
                 <p class="project"><b><i>CREDIT KARMA (2021 - 2022)</i></b></p>
-                <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner
-                    integrations
-                    during tenure while owning 7-8 concurrent projects,
-                    outperforming previous TPMs within the team</span></p>
-                <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the
-                    team
-                    for RESTful API integrations and processes</span></p>
+                <p class="description"><span class="bullet">&bull; Delivered the highest partner-integration throughput
+                    on the team, managing 7–8 concurrent projects and exceeding the performance of prior TPMs by
+                    consistently accelerating onboarding and reducing blocker escalations</span></p>
+                <p class="description"><span class="bullet">&bull; Trained and onboarded new program managers and
+                    engineers on API integration workflows, tooling, and best practices, accelerating ramp-up time and
+                    improving cross-team execution</span></p>
               </div>
 
               <div class="resume-item ps-4 position-relative">
@@ -967,19 +951,19 @@
                 <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="em"><b><i>Hudson MX, Atlanta, GA </i></b></em></p>
                 <p class="description"><span class="bullet">&bull; Led API gateway and credential management to
-                    streamline
-                    secure partner integrations while shadowing DevOps SME</span></p>
-                <p class="description"><span class="bullet">&bull; Created high-impact technical docs— SOAP and
-                    RESTful
-                    APIs, ERDs (entity relationship diagrams), and test
-                    cases— that improved onboarding and cross-team collaboration</span></p>
+                    streamline secure partner integrations while shadowing DevOps SME</span></p>
+                <p class="description"><span class="bullet">&bull; Created high-impact technical docs— SOAP and RESTful
+                    APIs, ERDs (entity relationship diagrams), and test cases— that improved onboarding and cross-team
+                    collaboration</span></p>
                 <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Warner Bros.
-                    Discovery referrals, recognized for high-impact contributions in the 2018 NCAA Digital technical
-                    product management apprenticeship program</span></p>
+                    Discovery referrals after recognition for high-impact contributions in the 2018 NCAA Digital
+                    technical product management apprenticeship program</span></p>
               </div>
             </div>
           </div>
         </div>
+
+        <!--PROJECTS-->
 
       </section><!-- END OF RESUME SECTION -->
 
