scheek-TechPortfolioDetailsPages-FontUpdates-12.10.25

--- a/tech-portfolio/web-dev-case-study-portfolio-details/index.html
+++ b/tech-portfolio/web-dev-case-study-portfolio-details/index.html
@@ -110,7 +110,7 @@
       <!-- Tech Portfolio Details Container -->
       <!-- Build Log (Milestone Style) -->
       <div class="portfolio-details" data-aos="fade-up" data-aos-delay="600">
-        <h2>BUILD LOG: WEBSITE CUSTOMIZATION MILESTONES</h2>
+        <h2>Build Log: Website Customization Milestones</h2>
         <p class="neon-text">
           A chronicle of how I evolved my site—from a basic Bootstrap template to a cyberpunk-themed tech portfolio
           that bridges design, engineering, and storytelling.
