scheek-Resume-and-Hero-Updates-12.11.25

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1>Sasha Cheek<br></h1>
         <h2>I am <span class="typed"
-            data-typed-items="a Systems Engineer, an Integrations Specialist, a Tech PM"></span></h2>
+            data-typed-items="a Systems Engineer, an Integrations Specialist"></span></h2>
         <!-- Divider -->
         <div class="t-divider t-node" aria-hidden="true"></div>
 
@@ -984,6 +984,28 @@
                     during the 2018
                     NCAA Digital technical product management apprenticeship program, which
                     facilitated securing a startup ad-tech position through Warner Bros. Discovery referrals</span></p>
+              </div>
+
+              <!-- WARNER BROS DISCOVERY ROLES-->
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2">Technical Product Management Intern, NCAA Digital & PGA.com</h4>
+                <p class="r-year">2018 - 2019</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>Warner Bros. Discovery, Atlanta, GA</i></b></em></p>
+                <p class="description"><span class="bullet">&bull;  Led platform coordination for the 2019 MARCH MADNESS TOURNAMENT, helping achieve record-breaking viewership across mobile, web, and OTT platforms</span></p>
+                <p class="description"><span class="bullet">&bull; Selected and placed through the T. Howard Foundation, a diversity pipeline program for media</span></p>
+                <p class="description"><span class="bullet">&bull; Utilized new web development technology and tools, creating the 2018 Ways to Watch page that became the fourth highest viewed internet page in August</span></p>
+                <p class="description"><span class="bullet">&bull; Continuous learning of products and applications to become a product expert</span></p>
+              </div>
+
+              <!-- NASA KSC ROLE-->
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2">Systems Engineering & Integrations Intern</h4>
+                <p class="r-year">2016</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>NASA Kennedy Space Center, Cape Canaveral, FL</i></b></em></p>
+                <p class="description"><span class="bullet">&bull;  Leader in hands-on support to the Technical Integration team in identifying and resolving open interface issues associated with SLS (Space Launch System) and Mars exploration</span></p>
+                <p class="description"><span class="bullet">&bull; Internship acquired through university research program and NASA defense contractor, MEI (Millennium Engineering & Integration)</span></p>
               </div>
               <!-- END OF RESUME EXPERIENCE SECTION COLUMN 2-->
             </div>
