--- a/index.html
+++ b/index.html
@@ -122,17 +122,7 @@
                   Personal Platform</a></li>
             </ul><!-- End of Tech Portfolio Drop Down Menu-->
           <li><a href="#published-work">PUBLISHED WORK</a></li>
-          <li class="dropdown"><a href="#blog"><span>BLOG</span><i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul><!-- Blog Drop Down Menu-->
-              <li><a href="/blog/2025-10-23-random-notes-from-an-emerging-writers-desk">Random Notes From an Emerging
-                  Writer's Desk</a></li>
-              <li><a href="/blog/2025-11-02-system-overload-troubleshooting-burnout-in-the-human-brain-stack/">System
-                  Overload: Troubleshooting Burnout in the Human Brain Stack</a></li>
-              <li><a href="/blog/2025-11-10-learning-real-wold-data-manipulation-in-grad-school/">Learning Real-World
-                  Data Manipulation</a></li>
-              <li><a href="/blog/2025-11-16-using-ai-as-a-tool/">Using AI as a Tool</a></li>
-            </ul><!-- End of Blog Drop Down Menu-->
-          </li>
+          <li><a href="#blog">BLOG</a></li>
           <li><a href="#resume">RESUME</a></li>
           <li><a href="#testimonials">TESTIMONIALS</a></li>
           <li><a href="#contact">CONTACT</a></li>
