scheek-heroSection-and-resumeSection-Updates-1.8.2025

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1>Sasha Cheek<br></h1>
         <h2>I am <span class="typed"
-            data-typed-items="a Systems Engineer, an Integrations Specialist"></span></h2>
+            data-typed-items="a Systems Engineer, a Technical Communicator"></span></h2>
         <!-- Divider -->
         <div class="t-divider t-node" aria-hidden="true"></div>
 
@@ -184,16 +184,13 @@
 
             <!-- Content and Subtitle-->
             <div class="col-lg-7 content" data-aos="fade-up">
-              <h2>Sasha Cheek is a systems engineer and integrations specialist who explores how software, data,
-                and
-                human systems intersect.</h2>
+              <h2>Sasha Cheek is a systems engineer who explores how software, data,
+                and human systems intersect.</h2>
 
               <div class="container" data-aos="fade-up" data-aos-delay="100">
-
                 <div class="about-paragraphs mt-3">
                   <p>
-                    Her core career centers on technical program work—API integrations, systems reliability, data flows,
-                    and cross-functional delivery for large-scale platforms. She specializes in translating complex
+                    Her core career centers on systems engineering with specializations in API integrations, data, and platform integrity. She is also talented in translating complex
                     technical ecosystems into clear, actionable insights that support real-world decision-making.
                   </p>
                 </div>
@@ -682,13 +679,7 @@
                 <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="mb-3">
                   <em>
-                    Dynamic Technical Integration Specialist with 6 years of experience designing and implementing
-                    scalable API, data, and
-                    system integrations across
-                    enterprise environments. Seeking to transition into a full-time Data, Integration, or Systems
-                    Engineering role within
-                    an engineering-driven
-                    organization committed to technical excellence and innovation.
+                    I am a systems engineer focused on API, integrations, and platform integrity. I design and govern the interfaces between systems-- defining data contracts, integration patterns, and technical constraints that enable platforms to operate correctly, securely, and on a large scale. My experience spans large partner ecosystems, and product-adjacent engineering/technology roles where engineering ethics and accountability matter.
                   </em>
                 </p>
               </div>
