scheek-testimonialsSection-Updates-1.8.2025

--- a/index.html
+++ b/index.html
@@ -1120,6 +1120,24 @@
                 </article>
               </div>
 
+              <!-- Slide 4 -->
+              <div class="swiper-slide">
+                <article class="t-card">
+                  <img src="/assets/img/testimonials/nick_testimonialpic.jpg" alt="Portrait of Nick Karahalios"
+                    class="t-avatar">
+                  <h3 class="t-name">Nick Karahalios</h3>
+                  <p class="t-role">Business Owner, NGK Property Inspections, LLC | Former Manager - Integrations Delivery at Indeed</p>
+                  <div class="t-divider t-node" aria-hidden="true"></div>
+                  <p class="t-quote">
+                    <span class="qmark left">“</span>
+                    I had the privilege of working with Sasha as her manager. She is very passionate about her work, and is an expert in her field. 
+                    She is also very organized, and always valued feedback to grow her skills, both technically and professionally. 
+                    I would recommend Sasha to anyone looking for a dedicated, trustworthy individual who can add a lot of value to their team.
+                    <span class="qmark right">”</span>
+                  </p>
+                </article>
+              </div>
+
             </div>
 
             <!-- Scoped controls -->
