scheek100-PublishedArticles-and-Blog-Posts-swipers-updates-v03-1.22.26

--- a/index.html
+++ b/index.html
@@ -557,6 +557,11 @@
           <script>
             const posts = [
               {
+                url: "/blog/2025-10-23-random-notes-from-an-emerging-writers-desk",
+                image: "assets/img/blog/pic3-blog-01.jpg",
+                date: "Oct 23, 2025"
+              },
+              {
                 url: "/blog/2025-11-02-system-overload-troubleshooting-burnout-in-the-human-brain-stack/",
                 image: "assets/img/blog/post-slide-2.jpg",
                 date: "Nov 2, 2025"
