--- a/index.html
+++ b/index.html
@@ -539,6 +539,12 @@
           </div>
           <!-- End Section Subtitle -->
 
+          <!-- Self-Published Articles Section Title-->
+        <section id="featured-blog-article" class="section-black py-5">
+          <div class="container section-title" data-aos="fade-up" data-aos-delay="100">
+            <h1>Featured Blog Articles</h1>
+          </div><!-- End of Self-Published Articles Section Title-->
+
           <!-- Blog Carousel Subsection (Swiper structure) -->
           <section class="blog-carousel section-black">
             <div class="container" data-aos="fade-up" data-aos-delay="100">
