scheek100-PublishedArticles-and-Blog-Posts-swipers-updates-v05-1.22.26

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           <!-- Self-Published Articles Section Title-->
         <section id="featured-blog-article" class="section-black py-5">
           <div class="container section-title" data-aos="fade-up" data-aos-delay="100">
-            <h1>Featured Blog Articles</h1>
+            <h1>Featured Blog Posts</h1>
           </div><!-- End of Self-Published Articles Section Title-->
 
           <!-- Blog Carousel Subsection (Swiper structure) -->
