scheek100-ResumeSection-Updates-2.28.26

--- a/index.html
+++ b/index.html
@@ -949,6 +949,20 @@
               <div class="col-lg-6">
                 <h3 class="my-3">Experience</h3>
 
+                <!-- PENNYMAC ROLE-->
+                <div class="resume-item ps-4 pb-4 position-relative">
+                  <h4 class="mb-2">Technical Product Analyst II</h4>
+                  <p class="r-year">2026 - Present</p>
+                  <div class="t-divider t-node" aria-hidden="true"></div>
+                  <p class="em"><b><i>Pennymac, Cary, NC</i></b></em></p>
+                  <p class="description"><span class="bullet">&bull; Translate complex business requirements into structured,
+                      engineering-ready user stories within a regulated financial services environment, collaborating cross-functionally
+                      to refine scope, dependencies, and API-driven integrations</span></p>
+                  <p class="description"><span class="bullet">&bull; Support end-to-end Agile delivery cycles, including backlog
+                      refinement, story estimation, release documentation, and API validation (Postman), ensuring compliance, deployment
+                      accuracy, and stakeholder alignment</span></p>
+                </div>
+
                 <!-- INDEED ROLE-->
                 <div class="resume-item ps-4 pb-4 position-relative">
                   <h4 class="mb-2">Technical Integrations Specialist (Contract)</h4>
@@ -1049,19 +1063,6 @@
                       August</span></p>
                   <p class="description"><span class="bullet">&bull; Continuous learning of products and applications to
                       become a product expert</span></p>
-                </div>
-
-                <!-- NASA KSC ROLE-->
-                <div class="resume-item ps-4 position-relative">
-                  <h4 class="mb-2">Systems Engineering & Integrations Intern</h4>
-                  <p class="r-year">2016</p>
-                  <div class="t-divider t-node" aria-hidden="true"></div>
-                  <p class="em"><b><i>NASA Kennedy Space Center, Cape Canaveral, FL</i></b></em></p>
-                  <p class="description"><span class="bullet">&bull; Leader in hands-on support to the Technical
-                      Integration team in identifying and resolving open interface issues associated with SLS (Space
-                      Launch System) and Mars exploration</span></p>
-                  <p class="description"><span class="bullet">&bull; Internship acquired through university research
-                      program and NASA defense contractor, MEI (Millennium Engineering & Integration)</span></p>
                 </div>
                 <!-- END OF RESUME EXPERIENCE SECTION COLUMN 2-->
               </div>
